# testing-cpp

./: .gitignore  README.md
2_Test_Ejem1/: .project
2_Test_Ejem1_B/: .cproject  .gitignore  .project
2_Test_Ejem1_B/src/: sample1_unittest.cc
2_Test_Ejem1_CMake/: .cproject  .project  CMakeLists.txt  README.md
2_Test_Ejem1_CMake/src/: CMakeLists.txt  Complex.cpp  Complex.h
2_Test_Ejem1_CMake/tests/: CMakeLists.txt  ComplexTest.cpp
2_Test_Ejer1_ComplexNumber/: .gitignore  .project  Complex.cpp  Complex.h  Complex_test.cpp
2_Test_Ejer1_Enun_ComplexNumber/: .project  main.cpp
2_Test_Ejer2_ComplexNumber/: .cproject  .project  ComplexFixture_test.cpp
2_Test_Ejer3_ComplexNumber/: .project  Complex.cpp  Complex.h  ComplexFixture_test.cpp
2_Test_Ejer4_ComplexNumber/: .project  Complex.h  ComplexFixture_test.cpp  ComplexParamAbs_test.cpp
2_Test_Ejer5_ComplexNumber/: .cproject  .project  Complex.cpp  Complex.h  ComplexFixture_test.cpp  ComplexParamAbs_test.cpp
2_Test_Ejer6_ComplexNumber/: .project  Complex.cpp  Complex.h  ComplexFixture_test.cpp  ComplexParamAbs_test.cpp  sonar-project.properties
2_Test_Ejer7_Chat/: .cproject  .project  ChatTest.cpp  User.h  sonar-project.properties
2_Test_Ejer7_Chat_CMake/: .cproject  .project  CMakeLists.txt  README.md
2_Test_Ejer7_Chat_CMake/src/: CMakeLists.txt  Chat.cpp  Chat.h
2_Test_Ejer7_Chat_CMake/tests/: CMakeLists.txt  MockUser.h
2_Test_Ejer7b_Chat/: .cproject  .project  Chat.cpp  Chat.h  ChatTest.cpp  MediaServer.h  MockMediaServer.h  sonar-project.properties
